Handle the new remote FF

--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   "api_cgn": "https://raw.githubusercontent.com/pagopa/io-backend/v9.1.0-RELEASE/api_cgn.yaml",
   "api_cgn_merchants": "https://raw.githubusercontent.com/pagopa/io-backend/v9.1.0-RELEASE/api_cgn_operator_search.yaml",
   "api_cgn_geo": "https://raw.githubusercontent.com/pagopa/io-backend/here_geoapi_integration/api_geo.yaml",
-  "content_specs": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.18/definitions.yml",
-  "api_pagopa_walletv2": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.14/bonus/specs/bpd/pm/walletv2.json",
+  "content_specs": "https://raw.githubusercontent.com/pagopa/io-services-metadata/IOAPPPEB-3-new-bpd-optin-ff/definitions.yml",
+  "api_pagopa_walletv2": "https://raw.githubusercontent.com/pagopa/io-services-metadata/IOAPPPEB-3-new-bpd-optin-ff/bonus/specs/bpd/pm/walletv2.json",
   "api_pagopa": "https://raw.githubusercontent.com/pagopa/io-app/master/assets/paymentManager/spec.json",
-  "pagopa_cobadge_configuration": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.14/pagopa/cobadge/abi_definitions.yml",
-  "pagopa_privative_configuration": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.14/pagopa/privative/definitions.yml",
-  "api_bpd_citizen": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.14/bonus/specs/bpd/citizen.json",
-  "api_bpd_citizen_v2": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.14/bonus/specs/bpd/citizen_v2.json",
-  "api_bpd_payment": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.14/bonus/specs/bpd/payment.json",
-  "api_bpd_award": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.14/bonus/specs/bpd/award.json",
-  "api_bpd_winning_transactions": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.14/bonus/specs/bpd/winning_transactions.json",
-  "api_bpd_winning_transactions_v2": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.14/bonus/specs/bpd/winning_transactions_v2.json",
+  "pagopa_cobadge_configuration": "https://raw.githubusercontent.com/pagopa/io-services-metadata/IOAPPPEB-3-new-bpd-optin-ff/pagopa/cobadge/abi_definitions.yml",
+  "pagopa_privative_configuration": "https://raw.githubusercontent.com/pagopa/io-services-metadata/IOAPPPEB-3-new-bpd-optin-ff/pagopa/privative/definitions.yml",
+  "api_bpd_citizen": "https://raw.githubusercontent.com/pagopa/io-services-metadata/IOAPPPEB-3-new-bpd-optin-ff/bonus/specs/bpd/citizen.json",
+  "api_bpd_citizen_v2": "https://raw.githubusercontent.com/pagopa/io-services-metadata/IOAPPPEB-3-new-bpd-optin-ff/bonus/specs/bpd/citizen_v2.json",
+  "api_bpd_payment": "https://raw.githubusercontent.com/pagopa/io-services-metadata/IOAPPPEB-3-new-bpd-optin-ff/bonus/specs/bpd/payment.json",
+  "api_bpd_award": "https://raw.githubusercontent.com/pagopa/io-services-metadata/IOAPPPEB-3-new-bpd-optin-ff/bonus/specs/bpd/award.json",
+  "api_bpd_winning_transactions": "https://raw.githubusercontent.com/pagopa/io-services-metadata/IOAPPPEB-3-new-bpd-optin-ff/bonus/specs/bpd/winning_transactions.json",
+  "api_bpd_winning_transactions_v2": "https://raw.githubusercontent.com/pagopa/io-services-metadata/IOAPPPEB-3-new-bpd-optin-ff/bonus/specs/bpd/winning_transactions_v2.json",
   "api_eu_covid_cert": "https://raw.githubusercontent.com/pagopa/io-backend/v9.1.0-RELEASE/api_eucovidcert.yaml",
   "api_sicilia_vola": "assets/SiciliaVola.yml",
   "api_cdc": "https://raw.githubusercontent.com/pagopa/io-app/master/assets/CdcSwagger.yml",
