--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "collectCoverage": true
   },
   "dependencies": {
-    "@pagopa/ts-commons": "^9.4.0",
+    "@pagopa/openapi-codegen-ts": "^12.0.2",
+    "@pagopa/ts-commons": "^10.13.0",
     "body-parser": "^1.19.1",
     "chalk": "^4.1.1",
     "cli-ux": "^5.6.3",
@@ -77,19 +78,16 @@
     "express": "^4.17.2",
     "faker": "^5.5.3",
     "figlet": "^1.5.2",
-    "fp-ts": "1.19.5",
-    "io-ts": "1.8.5",
-    "italia-ts-commons": "8.6.0",
-    "italia-utils": "^4.1.1",
+    "fp-ts": "^2.11.0",
+    "io-ts": "^2.2.16",
+    "jose": "^4.11.2",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "sha256": "^0.2.0",
-    "ts-pattern": "^3.3.4"
-  },
-  "resolutions": {
-    "fp-ts": "1.19.5"
+    "ts-pattern": "^3.3.4",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
@@ -105,7 +103,6 @@
     "@types/sha256": "^0.2.0",
     "@types/supertest": "^2.0.8",
     "@types/swagger-parser": "^7.0.1",
-    "italia-tslint-rules": "^1.1.3",
     "jest": "^27.4.7",
     "nodemon": "^2.0.15",
     "prettier": "^1.19.1",
