--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "start": "ts-node src/start.ts",
     "prettify": "prettier --write \"src/**/*.ts*\"",
     "tsc:noemit": "tsc --noEmit",
-    "generate:models": "rimraf generated && rimraf generated/definitions/backend && mkdir -p generated/definitions/backend && gen-api-models --api-spec $npm_package_api_backend_specs --out-dir ./generated/definitions/backend --no-strict && gen-api-models --api-spec $npm_package_api_public_specs --out-dir generated/definitions/backend",
+    "generate:models": "rimraf generated && rimraf generated/definitions/backend && mkdir -p generated/definitions/backend && gen-api-models --api-spec $npm_package_api_public_specs --out-dir generated/definitions/backend && gen-api-models --api-spec $npm_package_api_backend_specs --out-dir ./generated/definitions/backend --no-strict",
     "generate:content-definitions": "rimraf generated/definitions/content && mkdir -p generated/definitions/content && gen-api-models --api-spec $npm_package_content_specs --out-dir ./generated/definitions/content",
     "generate:pagopa-cobadge-configuration-definitions": "rimraf generated/definitions/pagopa/cobadge/configuration && mkdir -p generated/definitions/pagopa/cobadge/configuration && gen-api-models --api-spec $npm_package_pagopa_cobadge_configuration --out-dir ./generated/definitions/pagopa/cobadge/configuration",
     "generate:pagopa-privative-configuration-definitions": "rimraf generated/definitions/pagopa/privative/configuration && mkdir -p generated/definitions/pagopa/privative/configuration && gen-api-models --api-spec $npm_package_pagopa_privative_configuration --out-dir ./generated/definitions/pagopa/privative/configuration",
@@ -68,7 +68,6 @@
     "collectCoverage": true
   },
   "dependencies": {
-    "@pagopa/openapi-codegen-ts": "^12.0.2",
     "@pagopa/ts-commons": "^10.13.0",
     "body-parser": "^1.19.1",
     "chalk": "^4.1.1",
@@ -90,6 +89,7 @@
     "zlib": "^1.0.5"
   },
   "devDependencies": {
+    "@pagopa/openapi-codegen-ts": "^12.0.2",
     "@types/body-parser": "^1.19.2",
     "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.13",
@@ -102,7 +102,6 @@
     "@types/prettier": "^1.19.1",
     "@types/sha256": "^0.2.0",
     "@types/supertest": "^2.0.8",
-    "@types/swagger-parser": "^7.0.1",
     "jest": "^27.4.7",
     "nodemon": "^2.0.15",
     "prettier": "^1.19.1",
