--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "rimraf": "^3.0.2",
     "sha256": "^0.2.0",
     "ts-pattern": "^3.3.4",
+    "xml2js": "^0.4.23",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
@@ -102,6 +103,7 @@
     "@types/prettier": "^1.19.1",
     "@types/sha256": "^0.2.0",
     "@types/supertest": "^2.0.8",
+    "@types/xml2js": "^0.4.11",
     "jest": "^27.4.7",
     "nodemon": "^2.0.15",
     "prettier": "^1.19.1",
