--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "rimraf": "^3.0.2",
     "sha256": "^0.2.0",
     "ts-pattern": "^3.3.4",
+    "xml2js": "^0.4.23",
     "ulid": "^2.3.0"
   },
   "resolutions": {
