--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "preset": "ts-jest",
     "collectCoverage": true
   },
-  "dependencies": {    
+  "dependencies": {
+    "@mattrglobal/http-signatures": "^4.0.1",
     "@pagopa/ts-commons": "^10.13.0",
     "body-parser": "^1.19.2",
     "chalk": "^4.1.1",
@@ -86,8 +87,8 @@
     "rimraf": "^3.0.2",
     "sha256": "^0.2.0",
     "ts-pattern": "^3.3.4",
-    "xml2js": "^0.4.23",
-    "ulid": "^2.3.0"
+    "ulid": "^2.3.0",
+    "xml2js": "^0.4.23"
   },
   "resolutions": {
     "xml2js": "^0.4.23",
