--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "test": "jest",
     "test-watch": "jest --watch",
     "test:dev": "jest --detectOpenHandles --coverage=false",
-    "lint": "tslint -p . -t verbose",
-    "lint-autofix": "tslint -p . -t verbose --fix",
+    "lint": "eslint . -c .eslintrc.js --ext .ts,.tsx",
+    "lint-autofix": "eslint . -c .eslintrc.js --ext .ts,.tsx --fix",
     "start": "ts-node src/start.ts",
     "prettify": "prettier --write \"src/**/*.ts*\"",
     "tsc:noemit": "tsc --noEmit",
@@ -110,13 +110,20 @@
     "@types/sha256": "^0.2.0",
     "@types/supertest": "^2.0.8",
     "@types/xml2js": "^0.4.11",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-functional": "^5.0.8",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-sonarjs": "^0.19.0",
     "jest": "^27.4.7",
     "nodemon": "^2.0.15",
     "prettier": "^1.19.1",
     "supertest": "^6.2.1",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
-    "tslint": "^5.20.1",
     "typescript": "^4.5.4"
   }
 }
