--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "body-parser": "^1.19.2",
     "chalk": "^4.1.1",
     "cli-ux": "^5.6.3",
+    "compare-versions": "^6.0.0-rc.1",
     "crypto": "^1.0.1",
     "date-fns": "^2.27.0",
     "express": "^4.17.3",
