chore: Add fast-login api Open API specs

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "A mock server to help io-app development https://io.italia.it/",
   "version": "1.0.0",
   "main": "app.js",
-  "api_backend_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v10.13.0-RELEASE/api_backend.yaml",
-  "api_public_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v10.13.0-RELEASE/api_public.yaml",
-  "api_bonus_vacanze": "https://raw.githubusercontent.com/pagopa/io-backend/v10.13.0-RELEASE/api_bonus.yaml",
-  "api_cgn": "https://raw.githubusercontent.com/pagopa/io-backend/v10.13.0-RELEASE/api_cgn.yaml",
-  "api_cgn_merchants": "https://raw.githubusercontent.com/pagopa/io-backend/v10.13.0-RELEASE/api_cgn_operator_search.yaml",
+  "api_backend_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v12.6.1-RELEASE/api_backend.yaml",
+  "api_public_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v12.6.1-RELEASE/api_public.yaml",
+  "api_bonus_vacanze": "https://raw.githubusercontent.com/pagopa/io-backend/v12.6.1-RELEASE/api_bonus.yaml",
+  "api_cgn": "https://raw.githubusercontent.com/pagopa/io-backend/v12.6.1-RELEASE/api_cgn.yaml",
+  "api_cgn_merchants": "https://raw.githubusercontent.com/pagopa/io-backend/v12.6.1-RELEASE/api_cgn_operator_search.yaml",
   "api_cgn_geo": "https://raw.githubusercontent.com/pagopa/io-backend/here_geoapi_integration/api_geo.yaml",
   "content_specs": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.25/definitions.yml",
   "api_pagopa_walletv2": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.25/bonus/specs/bpd/pm/walletv2.json",
@@ -21,12 +21,13 @@
   "api_bpd_award": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.25/bonus/specs/bpd/award.json",
   "api_bpd_winning_transactions": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.25/bonus/specs/bpd/winning_transactions.json",
   "api_bpd_winning_transactions_v2": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.25/bonus/specs/bpd/winning_transactions_v2.json",
-  "api_eu_covid_cert": "https://raw.githubusercontent.com/pagopa/io-backend/v10.13.0-RELEASE/api_eucovidcert.yaml",
+  "api_eu_covid_cert": "https://raw.githubusercontent.com/pagopa/io-backend/v12.6.1-RELEASE/api_eucovidcert.yaml",
   "api_sicilia_vola": "assets/SiciliaVola.yml",
   "api_cdc": "https://raw.githubusercontent.com/pagopa/io-app/master/assets/CdcSwagger.yml",
   "api_fci": "https://raw.githubusercontent.com/pagopa/io-backend/v12.3.1-RELEASE/api_io_sign.yaml",
-  "api_pn": "https://raw.githubusercontent.com/pagopa/io-backend/v10.13.0-RELEASE/api_pn.yaml",
+  "api_pn": "https://raw.githubusercontent.com/pagopa/io-backend/v12.6.1-RELEASE/api_pn.yaml",
   "api_idpay": "https://raw.githubusercontent.com/pagopa/cstar-infrastructure/v2.102.1/src/domains/idpay-app/api/idpay_appio_full/openapi.appio.full.yml",
+  "api_fast_login": "https://raw.githubusercontent.com/pagopa/io-backend/v12.6.1-RELEASE/openapi/generated/api_fast_login.yaml",
   "author": "Matteo Boschi",
   "license": "MIT",
   "private": false,
@@ -64,6 +65,7 @@
     "generate:fci-definitions": "rimraf generated/definitions/fci && mkdir -p generated/definitions/fci  && gen-api-models --api-spec $npm_package_api_fci --out-dir ./generated/definitions/fci --no-strict",
     "generate:pn-definitions": "rimraf generated/definitions/pn && mkdir -p generated/definitions/pn && gen-api-models --api-spec $npm_package_api_pn --out-dir ./generated/definitions/pn --no-strict --request-types --response-decoders",
     "generate:idpay-definitions": "rimraf generated/definitions/idpay && mkdir -p generated/definitions/idpay  && gen-api-models --api-spec $npm_package_api_idpay --out-dir ./generated/definitions/idpay --no-strict",
+    "generate:fast-login-definitions": "rimraf generated/definitions/fast_login && mkdir -p generated/definitions/fast_login && gen-api-models --api-spec $npm_package_api_fast_login --out-dir ./generated/definitions/fast_login --no-strict --request-types --response-decoders",
     "generate:pagopa": "npm-run-all generate:pagopa-walletv2-definitions generate:pagopa-privative-configuration-definitions generate:pagopa-cobadge-configuration-definitions",
     "generate": "npm-run-all generate:*"
   },
