--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "api_eu_covid_cert": "https://raw.githubusercontent.com/pagopa/io-backend/v13.10.1-RELEASE/api_eucovidcert.yaml",
   "api_sicilia_vola": "assets/SiciliaVola.yml",
   "api_cdc": "https://raw.githubusercontent.com/pagopa/io-app/master/assets/CdcSwagger.yml",
-  "api_fci": "https://raw.githubusercontent.com/pagopa/io-backend/v13.10.1-RELEASE/api_io_sign.yaml",
+  "api_fci": "https://raw.githubusercontent.com/pagopa/io-backend/SFEQS-1889-add-x-io-sign-environment/api_io_sign.yaml",
   "api_pn": "https://raw.githubusercontent.com/pagopa/io-backend/v13.10.1-RELEASE/api_pn.yaml",
   "api_idpay": "https://raw.githubusercontent.com/pagopa/cstar-infrastructure/v4.5.0/src/domains/idpay-app/api/idpay_appio_full/openapi.appio.full.yml",
   "api_fast_login": "https://raw.githubusercontent.com/pagopa/io-backend/v13.10.1-RELEASE/openapi/generated/api_fast_login.yaml",
