--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "fp-ts": "^2.16.0",
     "io-ts": "^2.2.20",
     "jose": "^4.15.5",
+    "jsontokens": "^4.0.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "npm-run-all": "^4.1.5",
