--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "api_pn": "https://raw.githubusercontent.com/pagopa/io-backend/v13.39.1-RELEASE/api_pn.yaml",
   "api_idpay": "https://raw.githubusercontent.com/pagopa/cstar-infrastructure/v6.5.0/src/domains/idpay-app/api/idpay_appio_full/openapi.appio.full.yml",
   "api_fast_login": "https://raw.githubusercontent.com/pagopa/io-backend/v13.39.1-RELEASE/openapi/generated/api_fast_login.yaml",
-  "api_pagopa_walletv3": "https://raw.githubusercontent.com/pagopa/pagopa-infra/v1.35.1/src/domains/wallet-app/api/payment-wallet/v1/_openapi.json.tpl",
-  "api_pagopa_ecommerce": "https://raw.githubusercontent.com/pagopa/pagopa-infra/v1.35.1/src/domains/ecommerce-app/api/ecommerce-io/v1/_openapi.json.tpl",
+  "api_pagopa_walletv3": "https://raw.githubusercontent.com/pagopa/pagopa-infra/9b580dc0bc6640e832098ad1e9806e814e2f651a/src/domains/pay-wallet-app/api/io-payment-wallet/v1/_openapi.json.tpl",
+  "api_pagopa_ecommerce": "https://raw.githubusercontent.com/pagopa/pagopa-infra/9b580dc0bc6640e832098ad1e9806e814e2f651a/src/domains/ecommerce-app/api/ecommerce-io/v2/_openapi.json.tpl",
   "api_pagopa_biz_events": "https://raw.githubusercontent.com/pagopa/pagopa-infra/0a6784276fd43aaff7709dd90e0d379e77326f28/src/domains/bizevents-app/api/transaction-service/v1/_openapi-jwt.json.tpl",
-  "api_pagopa_platform": "https://raw.githubusercontent.com/pagopa/pagopa-infra/v1.45.0/src/domains/shared-app/api/session-wallet/v1/_openapi.json.tpl",
+  "api_pagopa_platform": "https://raw.githubusercontent.com/pagopa/pagopa-biz-events-service/main/openapi/openapi_io_patch.json",
   "api_services": "https://raw.githubusercontent.com/pagopa/io-backend/master/api_services_app_backend.yaml",
   "author": "Matteo Boschi",
   "license": "MIT",
