--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "api_pagopa_ecommerce": "https://raw.githubusercontent.com/pagopa/pagopa-infra/v1.35.1/src/domains/ecommerce-app/api/ecommerce-io/v1/_openapi.json.tpl",
   "api_pagopa_biz_events": "https://raw.githubusercontent.com/pagopa/pagopa-infra/0a6784276fd43aaff7709dd90e0d379e77326f28/src/domains/bizevents-app/api/transaction-service/v1/_openapi-jwt.json.tpl",
   "api_services": "https://raw.githubusercontent.com/pagopa/io-backend/master/api_services_app_backend.yaml",
+  "api_itwallet_eid": "https://api.swaggerhub.com/apis/ITHELPERS/it-wallet_api_e_id_provider/0.6.0/swagger.yaml",
+  "api_itwallet_qeea": "https://api.swaggerhub.com/apis/ITHELPERS/it-wallet_api_eaa_issuance_flow/0.6.0/swagger.yaml",
   "author": "Matteo Boschi",
   "license": "MIT",
   "private": false,
@@ -59,6 +61,8 @@
     "generate:fast-login-definitions": "rimraf generated/definitions/fast_login && mkdir -p generated/definitions/fast_login && gen-api-models --api-spec $npm_package_api_fast_login --out-dir ./generated/definitions/fast_login --no-strict --request-types --response-decoders",
     "generate:pagopa": "npm-run-all generate:pagopa-walletv2-definitions generate:pagopa-privative-configuration-definitions generate:pagopa-cobadge-configuration-definitions generate:pagopa-walletv3-definitions generate:pagopa-ecommerce-definitions generate:pagopa-transactions-definitions",
     "generate:services-definitions": "rimraf generated/definitions/services && mkdir -p generated/definitions/services  && gen-api-models --api-spec $npm_package_api_services --out-dir ./generated/definitions/services --no-strict",
+    "generate:itwallet-eid-definitions": "rimraf generated/definitions/itwallet/eid && mkdir -p generated/definitions/itwallet/eid  && gen-api-models --api-spec $npm_package_api_itwallet_eid --out-dir ./generated/definitions/itwallet/eid --no-strict --response-decoders",
+    "generate:itwallet-qeea-definitions": "rimraf generated/definitions/itwallet/qeea && mkdir -p generated/definitions/itwallet/qeea  && gen-api-models --api-spec $npm_package_api_itwallet_qeea --out-dir ./generated/definitions/itwallet/qeea --no-strict --response-decoders",
     "generate": "npm-run-all generate:*"
   },
   "jest": {
