--- a/package.json
+++ b/package.json
@@ -76,13 +76,15 @@
     "chalk": "^4.1.1",
     "cli-ux": "^5.6.3",
     "compare-versions": "^6.0.0-rc.1",
+    "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "date-fns": "^2.27.0",
-    "express": "^4.17.3",
+    "express": "4.19.2",
     "figlet": "^1.5.2",
     "fp-ts": "^2.16.0",
     "io-ts": "^2.2.20",
     "jose": "^4.15.5",
+    "jsontokens": "^4.0.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "npm-run-all": "^4.1.5",
@@ -90,6 +92,7 @@
     "sha256": "^0.2.0",
     "ts-pattern": "^3.3.4",
     "ulid": "^2.3.0",
+    "uuid": "^9.0.1",
     "xml2js": "^0.5.0"
   },
   "resolutions": {
@@ -99,8 +102,9 @@
     "@faker-js/faker": "^7.6.0",
     "@pagopa/openapi-codegen-ts": "^12.0.2",
     "@types/body-parser": "^1.19.2",
+    "@types/cookie-parser": "^1.4.7",
     "@types/date-fns": "^2.6.0",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.21",
     "@types/figlet": "^1.5.4",
     "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.178",
@@ -108,6 +112,7 @@
     "@types/node": "^16.11.17",
     "@types/sha256": "^0.2.0",
     "@types/supertest": "^2.0.8",
+    "@types/uuid": "^9.0.8",
     "@types/xml2js": "^0.4.11",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
