--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "date-fns": "^2.27.0",
+    "escape-html": "^1.0.3",
     "express": "4.20.0",
     "figlet": "^1.5.2",
     "fp-ts": "^2.16.0",
@@ -109,6 +110,7 @@
     "@types/body-parser": "^1.19.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/date-fns": "^2.6.0",
+    "@types/escape-html": "^1.0.4",
     "@types/express": "^4.17.21",
     "@types/figlet": "^1.5.4",
     "@types/jest": "^27.4.0",
