--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,11 @@ local.*
 !.eslintrc.js
 # Include .prettierrc.js
 !.prettierrc.js
+
+# Yarn
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
